--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-flagkit": "^2.0.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
-    "skeleton-elements": "^4.0.1"
+    "skeleton-elements": "^4.0.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/swiper": "^6.0.0",
     "autoprefixer": "^10.0.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.3.0",
