--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "beta": "^0.0.1",
+    "i18n": "^0.15.1",
     "next": "14.0.4",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-flagkit": "^2.0.4",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5",
+    "semantic-ui-react": "^3.0.0-beta.2",
     "skeleton-elements": "^4.0.1",
     "swiper": "^11.0.5"
   },
