--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/swiper": "^6.0.0",
     "autoprefixer": "^10.0.1",
     "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
