--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "redirects": [
         {
-            "source": "^/(?!pt-BR/)(.*)",
+            "source": "/",
             "destination": "/pt-BR/$1",
             "permanent": true
         }
