feat: implemented login page and function + installed packages

--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.7",
     "beta": "^0.0.1",
+    "lucide-react": "^0.331.0",
     "next": "14.0.4",
     "next-intl": "^3.5.4",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-flagkit": "^2.0.4",
+    "react-hook-form": "^7.50.1",
+    "react-toastify": "^10.0.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.2",
     "server-only": "^0.0.1",
     "skeleton-elements": "^4.0.1",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "tailwind-variants": "^0.2.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
