--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "beta": "^0.0.1",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-intl": "^3.5.4",
     "react": "^18.2.0",
     "react-dom": "^18",
