--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.7",
     "beta": "^0.0.1",
     "jotai": "^2.6.5",
