--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.7",
     "beta": "^0.0.1",
+    "dayjs": "^1.11.10",
     "jotai": "^2.6.5",
     "lucide-react": "^0.331.0",
     "next": "14.0.4",
