--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
