--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "camelcase": "off",
     "no-empty-function": "off",
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "react-hooks/rules-of-hooks": "off"
   }
 }
