--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,7 @@
 {
-  "extends": ["@rocketseat/eslint-config/react"],
+  "extends": [
+    "@rocketseat/eslint-config/react"
+  ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": "off",
